--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CognifAI Club - Roadmap</title>
+    <title>CognifAI Roadmaps</title>
     <style>
         /* General Reset */
         * {
@@ -23,7 +23,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            background: #002147; /* Professional deep blue */
+            background: white; /* Professional deep blue */
             color: #fff;
             padding: 10px 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -61,8 +61,8 @@
         /* Footer */
         .footer {
             text-align: center;
-            background-color: #002147;
-            color: #fff;
+            background-color: black;
+            color: white;
             padding: 10px;
             margin-top: 20px;
         }
@@ -71,18 +71,16 @@
 <body>
     <!-- Header with Club Logo -->
     <header class="header" style="display: flex; justify-content: center; align-items: center;">
-        <img src="club-logo.png" alt="CognifAI Logo"> <!-- Replace with your club logo URL -->
-
+        <img src="club-logo.png" alt="CognifAI Logo">
     </header>
 
     <!-- Content Section -->
     <div class="content">
-        <h2>Explore the AI Roadmap</h2>
+        <h2>The AI Roadmap</h2>
         <p>
-            Welcome to the CognifAI Club's official roadmap series! This roadmap provides a step-by-step guide to mastering Artificial Intelligence concepts.
+            Welcome to the CognifAI's roadmap series! This roadmap provides a step-by-step guide to mastering Artificial Intelligence concepts.
         </p>
 
-        <!-- iFrame Section -->
         <div class="iframe-container" style="width: 100%; height: 800px;">
             <iframe src="https://roadmap.sh/r/embed?id=67613b4c8fe51199daa77179" style="width: 100%; height: 100%;"></iframe>
         </div>
@@ -90,7 +88,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        &copy; 2024 CognifAI Club | All Rights Reserved | Designed with ❤️ by Likith and Team
+        Credits for webpage: Kshitij
     </footer>
 </body>
 </html>
