--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="content">
         <h2>The AI Roadmap</h2>
         <p>
-            Welcome to the CognifAI's roadmap series! This roadmap provides a step-by-step guide to mastering Artificial Intelligence concepts.
+            Welcome to the CognifAI's roadmap series!
         </p>
 
         <div class="iframe-container" style="width: 100%; height: 800px;">
