--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
             Welcome to CognifAI's Roadmap Series 2024! Discover the curated pathways to elevate your AI journey.
         </p>
 
-        <div class="iframe-container">
-            <iframe src="https://roadmap.sh/r/embed?id=67613b4c8fe51199daa77179"></iframe>
+        <div class="iframe-container" style="width: 100%; height: 800px;">
+            <iframe src="https://roadmap.sh/r/embed?id=67613b4c8fe51199daa77179" style="width: 100%; height: 100%;"></iframe>
         </div>
     </div>
 
