--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div class="content">
         <h2>The AI Roadmap</h2>
         <p>
-            Welcome to CognifAI's Roadmap Series 2024! Discover the curated pathways to elevate your AI journey.
+            Welcome to CognifAI's Roadmap Series 2024!
         </p>
 
         <div class="iframe-container" style="width: 100%; height: 800px;">
