--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Meta viewport for proper mobile scaling -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>CognifAI Roadmaps</title>
 
     <style>
@@ -59,16 +60,14 @@
         .iframe-container {
             position: relative;
             width: 100%;
-            overflow-x: auto; /* Allow horizontal scrolling if content overflows */
             border-radius: 6px;
+            overflow: hidden;
             border: 1px solid #ccc;
         }
 
         .iframe-container iframe {
             width: 100%;
             height: 800px;
-            max-width: 100%; /* Prevents going out of bounds */
-            display: block; /* Ensures proper rendering */
             border: none;
         }
 
@@ -88,8 +87,14 @@
                 font-size: 1.5rem;
             }
 
+            .iframe-container {
+                transform: scale(0.8);
+                transform-origin: top left;
+                width: 125%; 
+            }
+
             .iframe-container iframe {
-                height: 400px; /* Reduce height for smaller screens */
+                height: 600px;
             }
         }
     </style>
@@ -101,10 +106,7 @@
 
     <div class="content">
         <h2>The AI Roadmap</h2>
-        <p>
-            Welcome to CognifAI's Roadmap Series 2024!
-        </p>
-
+        <p>Welcome to CognifAI's Roadmap Series 2024!</p>
         <div class="iframe-container">
             <iframe src="https://roadmap.sh/r/embed?id=67613b4c8fe51199daa77179"></iframe>
         </div>
